Simple frontend for easy validation
