# types/user.go
@@ -5,9 +5,17 @@ import "github.com/google/uuid"
 type User struct {
 	Base
 	Email    string `json:"email" gorm:"type:varchar(100);uniqueIndex;not null"`
-	Password string `json:"-" gorm:"type:varchar(255);not null" json:"-"`
+	Password string `json:"password" gorm:"type:varchar(255);not null" json:"-"`
 	FullName string `json:"full_name" gorm:"type:varchar(100);not null"`
 	IsActive bool
+}
+
+type UserRegisterRequest struct {
+	Email          string `json:"email"`
+	Password       string `json:"password"`
+	RepeatPassword string `json:"repeat_password"`
+	FullName       string `json:"full_name"`
+	IsActive       bool   `json:"is_active"`
 }
 
 type UserResponse struct {
